WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11162
WebFrame calls Frame::begin() too early when loading requests
https://bugs.webkit.org/show_bug.cgi?id=11162
Summary
WebFrame calls Frame::begin() too early when loading requests
Darin Fisher (:fishd, Google)
Reported
2006-10-05 05:00:09 PDT
WebFrame calls Frame::begin() too early when loading requests. It currently calls Frame::begin() from WebFrame::loadDataSource, but it should hold off until it gets the receivedResponse callback from the ResourceLoader. Doing so will make it easy to feed mime type information into the Frame code.
Attachments
patch
(2.19 KB, patch)
2006-10-05 05:05 PDT
,
Darin Fisher (:fishd, Google)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Fisher (:fishd, Google)
Comment 1
2006-10-05 05:05:42 PDT
Created
attachment 10920
[details]
patch Note, this patch gets us setup to specify the actual mime type of the response once we have that information available via the PlatformResponse object. For now, this patch just feeds WebCore with "text/html" ... I will gladly comment out that part of the patch (or remove it) if that is desired.
Darin Adler
Comment 2
2006-10-05 07:40:02 PDT
Comment on
attachment 10920
[details]
patch Looks fine. r=me
Mark Rowe (bdash)
Comment 3
2006-10-05 14:47:08 PDT
Landed in
r16822
.
Dex Deacon
Comment 4
2006-10-06 12:09:06 PDT
This change causes a crash. Frame::begin() creates the document, which is accessed in WebFrame::loadDataSource(). Without the call to Frame::begin() in that function, we get a NULL dereference.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug