2006-10-05  MorganL  <morganl.webkit@yahoo.com>

Reviewed by Darin.

        Fixes http://bugs.webkit.org/show_bug.cgi?id=11162

        * COM/WebFrame.cpp:
        (WebFrame::loadDataSource):
        (WebFrame::receivedResponse):



Canonical link: https://commits.webkit.org/14121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@16822 268f45cc-cd09-0410-ab3c-d52691b4dbfc